<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ACDAT-Pizzeria</string>
    <string name="pizzeria">Pizzeria Trattoria La Briciola</string>
    <string name="nombrePizzero">Pino Prestanizzi</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="registro">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="no_cuenta">¿No tienes cuenta?</string>
    <string name="registrarse">Registrate aquí</string>
    <string name="descrpImg">LogoPizzeria</string>
    <string name="nombreUsuario">admin</string>
    <string name="bienvenido">Bienvenido:</string>
    <string name="pizzaFavorita">Pizza favorita</string>
    <string name="pizzaPersonalizada">Pizza personalizada</string>
    <string name="pizzaPredeterminada">Pizza predeterminada</string>
    <string name="Individual">Individual</string>
    <string name="Mediana">Mediana</string>
    <string name="Familiar">Familiar</string>
    <string name="Ingredientes">Ingredientes</string>
    <string name="York">York</string>
    <string name="Bacon">Bacon</string>
    <string name="PolloParrilla">Pollo a la parrilla</string>
    <string name="BaconCrispy">Bacon Crispy</string>
    <string name="ternera">Ternera</string>
    <string name="polloBufalo">Pollo Buffalo</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="Pulledpork">Pulled pork</string>
    <string name="anchoas">Anchoas</string>
    <string name="atun">Atun</string>
    <string name="VeggiChicken">VeggiChicken</string>
    <string name="Veggeroni">Veggeroni</string>
    <string name="champinon">Champiñon</string>
    <string name="aceitunas">Aceitunas negras</string>
    <string name="cebolla">Cebolla</string>
    <string name="Cebollacaramelizada">Cebolla caramelizada</string>
    <string name="tomate">Tomate</string>
    <string name="pimiento">Pimiento verde</string>
    <string name="pina">Piña</string>
    <string name="miaz">Maiz</string>
    <string name="QuesoParmesano">Queso Parmesano</string>
    <string name="SalsaQuesos">Salsas y quesos</string>
    <string name="continuar">Continuar</string>
    <string name="tamano">Tamaño</string>
    <string name="salsa">Salsa</string>
    <string name="nosalsa">Sin salsa</string>
    <string name="salsabbq">BBQ Original</string>
    <string name="rancherabbq">Ranchera BBQ</string>
    <string name="salsatomate">Salsa de tomate</string>
    <string name="cremafresca">Crema fresca</string>
    <string name="cremafrescaybarbacoa">Crema fresca y barbacoa</string>
    <string name="salsabourbon">Salsa Bourbon</string>
    <string name="barbacoatexas">Barbacoa Texas</string>
    <string name="carbonaraMornay">Carbonara Mornay</string>
    <string name="Queso">Queso</string>
    <string name="sinqueso">Sin queso</string>
    <string name="mozzarella">Mozzarella</string>
    <string name="vegano">Vegano</string>
    <string name="ConfirmarPedido">Confirmar Pedido</string>
    <string name="Pizza">Su pizza está lista</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Precio">Precio final</string>
    <string name="PedidoCamino">¡¡¡El pedido está en camino!!!</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
    <string name="VolverInicio">Volver al inicio</string>
    <string name="EstablecerFav">Establecer como pizza favorita</string>
    <string name="PaginaWeb">Página Web</string>
    <string name="PedirPizza">Pedir una pizza</string>
    <string name="Configuracion">Configuración</string>
    <string name="escojaPizza">Escoja una de las pizzas predeterminadas:</string>
    <string name="Confi">Configuración</string>
    <string name="modoOscuro">Activar modo oscuro</string>
    <string name="Oscuro">Oscuro</string>
    <string name="Claro">Claro</string>
    <string name="BorrarFavorita">Borrar pizza favorita</string>
    <string name="Borrar">Borrar</string>
    <string name="llamar">Llamar pizzería</string>
    <string name="Recordar">Recordar contraseña</string>
</resources>