<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzaPersonalizadaTamano">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:contentDescription="@string/descrpImg"
            app:srcCompat="@drawable/pizzalogo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pizzaPersonalizada"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/tamano"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/tamanyospizzas" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <RadioGroup
            android:id="@+id/rgTamano"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <RadioButton
                android:id="@+id/rbIndividual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-30dp"
                android:text="@string/Individual" />

            <RadioButton
                android:id="@+id/rbMediana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Mediana" />

            <RadioButton
                android:id="@+id/rbFamiliar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/Familiar" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/salsa"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.example.acdat_pizzeria.vista.RadioGridGroup
            android:id="@+id/rgSalsa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbSinSalsa"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0sp"
                    android:layout_marginRight="0sp"
                    android:text="@string/nosalsa" />

                <RadioButton
                    android:id="@+id/rbBBQOriginal"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0sp"
                    android:layout_marginRight="0sp"
                    android:text="@string/salsabbq" />

                <RadioButton
                    android:id="@+id/rbRancheraBBQ"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0sp"
                    android:layout_marginRight="0sp"
                    android:text="@string/rancherabbq" />

            </TableRow>

            <TableRow android:layout_width="match_parent">

                <RadioButton
                    android:id="@+id/rbSalsaTomate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0sp"
                    android:layout_marginRight="0sp"
                    android:text="@string/salsatomate" />

                <RadioButton
                    android:id="@+id/rbCremaFresca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0sp"
                    android:layout_marginRight="0sp"
                    android:text="@string/cremafresca" />

                <RadioButton
                    android:id="@+id/rbCremaFrescaBarbacoa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0sp"
                    android:layout_marginRight="0sp"
                    android:text="@string/cremafrescaybarbacoa" />

            </TableRow>

            <TableRow android:layout_width="match_parent">

                <RadioButton
                    android:id="@+id/rbSalsaBourbon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0sp"
                    android:layout_marginRight="0sp"
                    android:text="@string/salsabourbon" />

                <RadioButton
                    android:id="@+id/rbBarbacoaTexas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0sp"
                    android:layout_marginRight="0sp"
                    android:text="@string/barbacoatexas" />

                <RadioButton
                    android:id="@+id/rbCarbonaraMornay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0sp"
                    android:layout_marginRight="0sp"
                    android:text="@string/carbonaraMornay" />

            </TableRow>

        </com.example.acdat_pizzeria.vista.RadioGridGroup>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/Queso"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgQueso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="40sp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbSinQueso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sinqueso" />

            <RadioButton
                android:id="@+id/rbMozzarella"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mozzarella" />

            <RadioButton
                android:id="@+id/rbVegano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vegano" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:height="60sp"
            android:text="@string/continuar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>