<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuOpciones">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:contentDescription="@string/descrpImg"
            app:srcCompat="@drawable/pizzalogo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pizzeria"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:gravity="center"
            android:text="@string/nombrePizzero"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:text="@string/bienvenido"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:text="@string/nombreUsuario"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:height="70sp"
            android:text="@string/PaginaWeb" />

        <Button
            android:id="@+id/btnLlamar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="30sp"
            android:height="70sp"
            android:text="@string/llamar" />

        <Button
            android:id="@+id/btnPizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="20sp"
            android:height="70sp"
            android:text="@string/PedirPizza" />

        <Button
            android:id="@+id/btnConfiguracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:height="70sp"
            android:text="@string/Configuracion" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>