<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuracion">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:contentDescription="@string/descrpImg"
            app:srcCompat="@drawable/pizzalogo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Confi"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            app:srcCompat="@drawable/confi" />

        <TextView
            android:id="@+id/lblModoOscuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="10sp"
            android:text="@string/modoOscuro"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:height="70sp"
            android:text="ToggleButton"
            android:textOff="@string/Claro"
            android:textOn="@string/Oscuro"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/BorrarFavorita"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:height="70sp"
            android:text="@string/Borrar"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>