<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:contentDescription="@string/descrpImg"
            app:srcCompat="@drawable/pizzalogo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pizzeria"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nombrePizzero"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:text="@string/iniciarSesion"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:labelFor="@id/edTextUsuario"
            android:text="@string/usuario"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edTextUsuario"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:labelFor="@id/edTextPassword"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/cbRecordar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/Recordar" />

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="10sp"
            android:text="@string/iniciarSesion" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="92dp"
                android:layout_height="match_parent"
                android:layout_marginStart="30sp"
                android:layout_weight="1"
                android:text="@string/no_cuenta" />

            <TextView
                android:id="@+id/lblRegistrate"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/registrarse"
                android:textColor="?android:attr/statusBarColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>